test/e2e/fail_compile/type_errors/plain_call_forwarded_runtime_param_demotion.cst
fn id(value: num) -> num { value }

fn forward_plain(value: runtime num) -> num {
    id(value)
}

fn main() -> num {
    forward_plain(runtime { 1 })
}
